--- a/lab1/hw1.Rmd
+++ b/lab1/hw1.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 1 Homework"
-author: "Your Name Here"
+author: "McKenzie Scriven"
 date: "`r Sys.Date()`"
 output:
   html_document: 
@@ -12,11 +12,17 @@ Answer the following questions and/or complete the exercises in RMarkdown. Pleas
 
 **1. Please tell us why you are taking BIS 15L.**
 
+I am a systems and synthetic bio major, so it is required. 
+
 **2. Do you have any coding experience? If yes, please tell us what languages you have coded in and your level of experience.**
+
+I took a seminar and a statistics course where we used R, mostly for graphs and statistics functions. I also did an introductory python course. 
 
 **3. Navigate to the `datascibiol` repository on GitHub. Notice that near the bottom there is a description of the repository. You want something like this on your repository! It is built by making edits to the `README.md` file using RMarkdown. Edit your repository's `README.md` file so that you have an informative description, including your email address. Be creative! You don't need to just copy mine. There are lots of examples online.**  
 
 **4. Please put a link to your GitHub repository below.**
+
+https://github.com/mmscriven/BIS15L_W26_mmscriven
 
 **5. Make sure that your repository includes the practice file `dummy_push` from lab 1.2. If you have not done so already, please add your name to this file, knit it, and push it to your repository.**  
 
