--- a/lab2/lab2_1.Rmd
+++ b/lab2/lab2_1.Rmd
@@ -24,22 +24,22 @@ In order to access the potential of R we need to assign values or other types of
 
 Assign a value to object 'x'. The '<-' symbol is read as 'gets'. In this case, x gets 42. Make sure that you are in the environment panel and you should see the value associated with 'x'. On a mac, you can push `option` and `-` to automatically generate the gets symbol.  
 ```{r}
-
+x <- 42
 ```
 
 To print the object to the screen, just type x.  
 ```{r}
-
+x
 ```
 
 Assign a value of 30 to a new object y.
 ```{r}
-
+y <- 30
 ```
 
 The = symbol works, but is not a convention followed by most programmers.
 ```{r}
-
+y = 30
 ```
 
 Once objects have been created, you can do things with them.  
@@ -53,12 +53,13 @@ Once objects have been created, you can do things with them.
 
 Make two new objects, treatment and control. The value of treatment is 36 and the value of control is 38.
 ```{r}
-
+treatment <- 36
+control <- 38
 ```
 
 What is the sum of treatment and control?
 ```{r}
-
+treatment+control
 ```
 
 Here we make a new object `my_experiment` that is the sum of the treatment and control. Notice that I use `_` and not spaces. 
@@ -68,7 +69,7 @@ Here we make a new object `my_experiment` that is the sum of the treatment and c
 
 We can also use the function sum to do the same thing. Notice that if I give a new object the same name as an existing object, the old one is replaced.
 ```{r}
-
+sum(treatment,control)
 ```
 
 To learn more about the sum function, use the help command `?`.
@@ -99,7 +100,7 @@ Order of operations applies, so we need to tell R exactly what we want.
 
 Here we use the mean function. Notice that we use `c` which stands for concatenate. More on this later.  
 ```{r}
-
+mean(c(2,8,2))
 ```
 
 Why does this not work?
@@ -110,17 +111,19 @@ Why does this not work?
 ## Practice
 1. Create three new objects, `venom_GT`, `chiron`, and `veyron`. These are the fastest cars in the world. Assign each car to its top speed. The venom_GT can go 270, chiron is 261, and veyron is 268. 
 ```{r}
-
+venom <- 270
+chiron <- 261
+veyron <- 268
 ```
 
 2. Use arithmetic to calculate the mean top speed for the cars.
 ```{r}
-
+(270+261+268)/3
 ```
 
 3. Use the function `mean()` to calculate the mean top speed for the cars.
 ```{r}
-
+mean(c(venom,chiron,veyron))
 ```
 
 ## Types of Data
@@ -134,7 +137,7 @@ my_logical <- FALSE
 
 To find out what type of data you are working with, use the `class()` function. This is important because sometimes we will need to change the type of data to perform certain analyses.
 ```{r}
-
+class(4)
 ```
 
 ```{r}
@@ -148,7 +151,7 @@ You can use the `is()` and `as()` functions to clarify or specify a type of data
 
 Let's convert my_numeric to an integer.
 ```{r}
-
+as.integer(my_numeric)
 ```
 
 ```{r}
