--- a/lab9/lab9_2.Rmd
+++ b/lab9/lab9_2.Rmd
@@ -48,6 +48,7 @@ expenditures
 1. Are these data tidy? Please use `pivot_longer()` to tidy the data.
 ```{r}
 expenditures <- pivot_longer(expenditures, cols = !expenditure, names_to = "year", values_to = "value")
+expenditures
 ```
 
 2. Restrict the data to medical and health expenditures only. Sort in ascending order.
